--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@hookform/resolvers": "^2.8.10",
     "@popperjs/core": "^2.11.3",
     "@reduxjs/toolkit": "^1.2.5",
+    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
     "animate.css": "4.1.1",
     "apexcharts": "^3.35.2",
     "apexcharts-clevision": "^3.28.5",
@@ -33,6 +35,7 @@
     "events": "^3.3.0",
     "file-saver": "^2.0.5",
     "flatpickr": "^4.6.13",
+    "formik": "^2.4.6",
     "history": "^5.3.0",
     "html-to-draftjs": "1.5.0",
     "i18next": "^22.0.5",
@@ -73,6 +76,7 @@
     "react-shepherd": "^4.1.0",
     "react-slidedown": "^2.4.7",
     "react-sortablejs": "6.0.0",
+    "react-toastify": "^10.0.6",
     "reactstrap": "^9.1.5",
     "recharts": "^2.1.9",
     "redux": "^4.2.0",
