--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "i18next": "^22.0.5",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.1",
+    "jalali-moment": "^3.3.11",
     "jquery": "^3.6.0",
     "jsonwebtoken": "8.5.1",
     "moment": "^2.29.3",
@@ -67,6 +68,7 @@
     "react-hook-form": "^7.39.4",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.0.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-paginate": "^8.1.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-rating": "2.0.5",
@@ -76,6 +78,7 @@
     "react-shepherd": "^4.1.0",
     "react-slidedown": "^2.4.7",
     "react-sortablejs": "6.0.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "reactstrap": "^9.1.5",
     "recharts": "^2.1.9",
